# notion-daily-quote

./: .gitignore  README.md  daily_quote.py  dynamodb.py  lambda_function.py  notion.py  pyproject.toml  requirements.txt  s3.py  s3_access.py
.github/workflows/: daily_quote.yml
api/: quote.py
docs/: index.html
