[tool.poetry]
name = "notion-daily-quote"
version = "0.1.0"
description = ""
authors = ["pandavas89 <pandavas89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.52"
notion-client = "^2.2.1"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
